--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import Contador from '../components/Contador.jsx';
     </h1>
 
     <button class="btn btn-primary">
-      Botón DaisyUI, DaisyUI y Tailwind están funcionando
+      Botón DaisyUI, DaisyUI y Tailwind están funcionando rama
     </button>
 
     <Contador client:load />
