--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.css';
 import Contador from '../components/Contador.jsx';
+import Formulario from '../components/Formulario.jsx'
 ---
 
 <!DOCTYPE html>
@@ -16,9 +17,15 @@ import Contador from '../components/Contador.jsx';
     </h1>
 
     <button class="btn btn-primary">
-      Botón DaisyUI, DaisyUI y Tailwind están funcionando rama
+      Botón DaisyUI, DaisyUI y Tailwind están funcionando
     </button>
 
     <Contador client:load />
+    <Contador client:load />
+    <Contador client:load />
+
+
+    <Formulario client:load />
+
   </body>
 </html>
